lume/Lume_3D/test/unittest/assets/test_data/gltf/Invalid/Duck_invalid_bufferview.glb
# This file was originally tracked by Git LFS but LFS tracking has been removed
version https://git-lfs.github.com/spec/v1
oid sha256:b87069a4064b813d7b16568f1bd27c9fc4e3dee5e6aa20669c988f69fdd9b19f
size 120486
